# Enterprise_IQ_AI_Engine

./: .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml
cpanel/: package-lock.json  package.json
cpanel/src/app/: layout.tsx
cpanel/src/components/: ThemeProvider.tsx
cpanel/src/lib/: api-client.ts
cpanel/src/store/: useAppStore.ts
cpanel/src/styles/: globals.css
docs/: setup_guide.md
engine/: .env.example  app.py
engine/alembic/: env.py
engine/alembic/versions/: 60cba1426bc3_seed_admin_user.py  6881d867c2c6_create_assistant_table.py  804f027154ed_create_users_table.py
engine/modules/assistant/: __init__.py  assistant_models.py  assistant_routes.py  assistant_service.py  routes.py
engine/modules/auth/: __init__.py  auth_models.py  auth_routes.py  auth_schemas.py  auth_service.py  routes.py
engine/modules/service_account/: __init__.py  routes.py  service_account_routes.py  service_account_schema.py  service_account_service.py
engine/routes/v1/: __init__.py  health_route.py
engine/shared/config/: settings.py
engine/shared/core/: config.py  deps.py  middleware.py  redis.py  security.py  user_sessions.py
engine/shared/db/: base.py  base_class.py  check_db.py  session.py
engine/shared/exceptions/: exceptions.py  service_exceptions.py
engine/shared/llm/: __init__.py  anthropic.py  (+5 more)
infra/docker/: Dockerfile  docker-compose.yml
scripts/: run_dev.py  run_migrate.py
shared/: __init__.py
shared/logging/: __init__.py  adapter.py  formatter.py  logger.py
shared/utils/: __init__.py  env_manager.py
tests/: main_test.py
(+43 files in other folders)
